# acblog

./: .gitignore  Dockerfile  docker-compose.yaml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
blog/: db.json  db.sqlite3  pytest.ini
blog/blog/: settings.py  urls.py
blog/posts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
blog/posts/migrations/: 0001_initial.py  0002_initial.py  0003_post_image.py  0004_subscriberslist.py  0005_rename_subscriberslist_subscribers_and_more.py  0006_alter_category_slug_alter_post_slug.py  0007_alter_subscribers_email_alter_subscribers_is_active.py  0008_alter_subscribers_is_active_and_more.py  0009_alter_post_pub_date.py  0010_alter_category_options_alter_category_id_and_more.py  0011_alter_post_pub_date.py  0012_alter_post_pub_date.py
blog/posts/pytest/: conftest.py  test_content.py  test_logic.py  test_routes.py  test_validation.py
blog/posts/templates/admin/: send_email.html
blog/users/: models.py
blog/users/migrations/: 0001_initial.py  0002_alter_myuser_id.py
